# slide_gen

./: .gitignore  Cargo.toml  Makefile.toml  README.md
.github/workflows/: check.yml  deploy.yml  manual_deploy.yml  pages.yml
alignment/: Cargo.toml
alignment/src/: lib.rs  model.rs  slide.rs
crates/alignment/: Cargo.toml
crates/alignment/src/: model.rs  slide.rs
crates/shuffle/: Cargo.toml
crates/shuffle/src/: lib.rs
crates/viewer/: Cargo.toml
crates/viewer/src/: components.rs  move_cubes.rs  put_cubes.rs  resources.rs  rotate.rs  setup.rs
cubes/: Cargo.toml
cubes/src/alignment/: model.rs
docs/: wasm.js
shuffle/: Cargo.toml
shuffle/src/: lib.rs
viewer/: Cargo.toml  Makefile.toml  index.html
viewer/.assets/: index.html
viewer/src/: components.rs  lib.rs  main.rs  move_cubes.rs  put_cubes.rs  resources.rs  rotate.rs  setup.rs
