[package]
name = "viewer"
version = "0.1.0"
edition = "2021"

[dependencies]
alignment = { path = "../alignment" }
shuffle = { path = "../shuffle" }

tracing-wasm = "=0.2.0"

bevy_webgl2 = "0.5"
bevy = { version = "0.5", default-features = false, features = ["bevy_gltf", "bevy_winit", "render", "png"] }

[profile.dev]
opt-level = 2

[profile.release]
lto = true
opt-level = 's'
