[package]
name = "viewer"
version = "0.1.0"
edition = "2021"

[dependencies]
alignment = { path = "../alignment" }
shuffle = { path = "../shuffle" }

[dependencies.bevy]
version = "0.6"
default-features = false
features = [
  "bevy_gltf",
  "bevy_winit",
  "render",
  "png"
]

[profile.dev]
opt-level = 2

[profile.release]
lto = true
opt-level = 'z'
